# RAG-Report-Generator

./: .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  docker-run.sh  langgraph.json  main.py  pyproject.toml  requirements.txt
scripts/: example_queries.py  ingest_sample_data.py  start_api.sh  start_langgraph_studio.sh  test_api.py  verify_setup.py
src/: __init__.py  report_writer.py
src/agent/: __init__.py  graph.py  nodes.py  state.py  studio_graph.py
src/api/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/data_ingestion/: __init__.py  ingestion_pipeline.py
src/observability/: __init__.py  cost_tracker.py  logger.py
src/retrieval/: __init__.py  embeddings.py  vector_store.py
src/utils/: __init__.py  document_loader.py  text_splitter.py
tests/: __init__.py  test_agent_nodes.py  test_api_app.py  test_api_script_wrapper.py  test_cli_main.py  test_cost_tracker.py  test_ingestion_pipeline.py  test_report_graph.py  test_report_writer.py  test_vector_store.py  test_verify_setup_script.py
